--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -3,7 +3,9 @@
     overflow-y: auto;
     max-height: 70vh;
   }
-  
-.listItem{
-  padding: 10px;
-}
+
+  ul, ol {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
